fix highlight on special in dark mode

--- a/main.scss
+++ b/main.scss
@@ -17,6 +17,10 @@ body.dark-mode {
 
   .node.special {
     stroke: #fff;
+
+    &.highlighted {
+      stroke: tomato;
+    }
   }
 }
 
